--- a/src/Palette/Palette.css
+++ b/src/Palette/Palette.css
@@ -1,10 +1,10 @@
 .palette{
-    background-image: url('./Casings/lavender-closed.png');
+    /* background-image: url('./Casings/lavender-closed.png'); */
     background-size: contain;
     background-repeat: no-repeat;
-    width: 100%;
+    /* width: 100%;
     height: 0;
-    padding-top: 66.67%;
+    padding-top: 66.67%; */
     border: red 2px solid;
 }
 
