--- a/src/Palette/Palette.css
+++ b/src/Palette/Palette.css
@@ -1,7 +1,8 @@
 .palette{
     background-size: contain;
     background-repeat: no-repeat;
-    border: red 2px solid;
+    border: none;
+    margin-top: 100px;
 }
 
 button{
